# applied-ai-workshop

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
notebooks/01_missing_values/: notebook.py  solution.py
notebooks/02_low_code_ml/: notebook.py  solution.py  solutions.py
notebooks/03_autoencoder/: notebook.py
notebooks/end_to_end_ML/: ETL_process.py  bronze_data.py  bronze_external_data.py  data_extraction.py  data_preparation.py  gold_data.py  regression_tree_model.py  silver_data.py  silver_external_data.py
presentation/: __main__.py  background.py  examples.py  front_page.py  main.py  overview.py
presentation/pages/: 1_overview.py  2_Eksempler.py  2_examples.py  3_Handson.py  3_demo.py  examples.py  overview.py
presentation/utils/: background.py  defaults.py  detr.py  front_page.py  kantega.py
resources/: redning_input.csv  redning_output.csv
workshop/data/: naturkampen_excersice_1.csv  naturkampen_excersice_2.csv
