[tool.poetry]
name = "presentation"
version = "0.1.0"
description = ""
authors = ["theovald <gjoegjoe@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
